test/fail/CyclicImports/A.curry
module CyclicImports.A where

import CyclicImports.B
